0025411: BVH package - eliminate warning about hidden overloaded method ::Box

Conflicts:
	src/OpenGl/OpenGl_SceneGeometry.hxx